tests/negative/runtime/err_undefined_func.ual
-- Runtime error test: undefined function
nonexistent_function()
